<resources xmlns:http="http://schemas.android.com/apk/res-auto">
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/Pubs</item>
        <item>@string/Parties</item>
        <item>@string/Restaurants</item>
        <item>@string/Shops</item>
        <item>@string/ATM_Finder</item>
        <item>@string/TobaccoShops</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="app_name">SzegedNights</string>
    <string name="Szeged_Nights">SzegedNights</string>
    <string name="Pubs">Kocsmák</string>
    <string name="Parties">Szórakozóhelyek</string>
    <string name="Restaurants">Étkezdék</string>
    <string name="Shops">Éjjel-Nappalik</string>
    <string name="ATM_Finder">ATM-Kereső</string>
    <string name="TobaccoShops">Dohányboltok</string>
    <string name="title_activity_browser_page">BrowserPage</string>

    <string name="title_activity_atm_page">AtmPage</string>
    <string name="title_activity_parties_page">PartiesPage</string>
    <string name="title_activity_taxi_page">TaxiPage</string>
    <string name="title_activity_day_night_page">DayNightPage</string>
    <string name="title_activity_tobacco_page">TobaccoPage</string>
    <string name="title_activity_restaurants_page">RestaurantsPage</string>
    <string name="Distance">Distance</string>
    <string name="Open">Nyitva</string>
    <string name="title_activity_tobbaco_shop">Map</string>
    <string name="google_maps_key">AIzaSyASp8Ijd9UXKT6wxhJ6qDQRG8aYGfXjBSE</string>
    <string name="title_activity_pub_browser_page">PubBrowserPage</string>
    <string name="title_activity_maps_route">Map</string>
    <string name="title_activity_map_route">Map</string>
    <string name="title_activity_map_to_display">Map</string>
    <string name="title_activity_draw_route_map">Map</string>
    <string name="title_activity_draw_route">Map</string>
    <string name="title_activity_subscribed_page">SubscribedPage</string>
    <string name="info">Info</string>
    <string name="help">Javítás kérése</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
