<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Szeged_Night"
        android:id="@+id/tvSzegedNight"
        android:textSize="50sp"
        android:layout_gravity="center_vertical" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pubs"
        android:id="@+id/btnPubs"
        android:onClick="onClick"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btnRestaurants"
        android:layout_alignEnd="@+id/btnRestaurants"
        android:layout_above="@+id/btnParties" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Parties"
        android:id="@+id/btnParties"
        android:onClick="onClick"
        android:layout_alignTop="@+id/btnRestaurants"
        android:layout_toLeftOf="@+id/btnRestaurants"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Restaurants"
        android:id="@+id/btnRestaurants"
        android:onClick="onClick"
        android:layout_above="@+id/btnShops"
        android:layout_toRightOf="@+id/btnTaxies"
        android:layout_toEndOf="@+id/btnTaxies" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Taxies"
        android:id="@+id/btnTaxies"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:layout_alignTop="@+id/btnShops"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Shops"
        android:id="@+id/btnShops"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:layout_above="@+id/btnATM"
        android:layout_toRightOf="@+id/btnTobaccoShops"
        android:layout_toEndOf="@+id/btnTobaccoShops" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ATM_Finder"
        android:id="@+id/btnATM"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:layout_alignTop="@+id/btnTobaccoShops"
        android:layout_toEndOf="@+id/btnTobaccoShops"
        android:layout_toRightOf="@+id/btnTobaccoShops" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/TobaccoShops"
        android:id="@+id/btnTobaccoShops"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:layout_marginBottom="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    </RelativeLayout>